01-lab-setup/03-tier3-setup/resources/llmd/test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen3-direct-route
  namespace: llmd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: k8s-internal
      namespace: envoy-gateway-system
  hostnames:
    - llmd.internal.k8s.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - kind: Service
          name: qwen3-direct
          port: 8200
