01-lab-setup/03-tier3-setup/resources/llmd/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen3-direct
  namespace: llmd
spec:
  selector:
    llm-d.ai/model: qwen3-0-6b
  ports:
  - port: 8200
    targetPort: 8200
    protocol: TCP
